// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphicsResult.vue renders re-renders after charts data changes 1`] = `
<div class="graphics-results bh-grid bh-grid--column">
  <div class="bh-grid__item graphics-results_wrapper">
    <h2>Evaluate output (Test #)</h2>
    <p>For more information about test results, see our <a href="">documentation here</a>.</p>
    <h3>Precision and recall reports</h3>
    <p class="graphic-results">A perfect precision score of 1.0
      means that every test result was positive (but says nothing about whether all
      positive results were retrieved) whereas a perfect recall score of 1.0 means that
      all positive results were retrieved by the search (but says nothing
      about how many false positives were also retrieved).</p>
    <p> Read
      more about in <a href="">our documentation</a>.</p>
    <h4>Intent report</h4>
    <!----> <canvas id="intentsChart" class="graphics-results__charts"></canvas>
  </div>
  <div class="bh-grid__item">
    <h4>Entities</h4>
    <!----> <canvas id="entitiesChart" class="graphics-results__charts"></canvas>
  </div>
  <div class="bh-grid__item">
    <h4>Entity report</h4>
    <p>The confusion matrix shows you which intents
      are mistaken for others. Read more about it in <a href="">our documentation</a>.</p>
    <div class="graphics-results__charts">
      <div class="graphics-results__charts__loading">
        <bh-loading-stub></bh-loading-stub>
      </div>
      <!---->
    </div>
  </div>
  <div class="bh-grid__item">
    <h4>Intent confidence distribution</h4>
    <p>
      The histogram allows you to visualize the
      confidence distribution for all predictions, with the volume of
      correct and incorrect predictions being displayed by green and red bars respectively.
      Improving the quality of your training data will move the
      green histogram bars to the right and
      the red histogram bars to the left of the plot.
    </p>
    <p>Read more about it in <a href="">our documentation</a>.</p>
    <div class="graphics-results__charts">
      <div class="graphics-results__charts__loading">
        <bh-loading-stub></bh-loading-stub>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`GraphicsResult.vue renders renders 1`] = `
<div class="graphics-results bh-grid bh-grid--column">
  <div class="bh-grid__item graphics-results_wrapper">
    <h2>Evaluate output (Test #2)</h2>
    <p>For more information about test results, see our <a href="">documentation here</a>.</p>
    <h3>Precision and recall reports</h3>
    <p class="graphic-results">A perfect precision score of 1.0
      means that every test result was positive (but says nothing about whether all
      positive results were retrieved) whereas a perfect recall score of 1.0 means that
      all positive results were retrieved by the search (but says nothing
      about how many false positives were also retrieved).</p>
    <p> Read
      more about in <a href="">our documentation</a>.</p>
    <h4>Intent report</h4>
    <div class="graphics-results__charts__loading">
      <bh-loading-stub></bh-loading-stub>
    </div> <canvas id="intentsChart" class="graphics-results__charts"></canvas>
  </div>
  <div class="bh-grid__item">
    <h4>Entities</h4>
    <div class="graphics-results__charts__loading">
      <bh-loading-stub></bh-loading-stub>
    </div> <canvas id="entitiesChart" class="graphics-results__charts"></canvas>
  </div>
  <div class="bh-grid__item">
    <h4>Entity report</h4>
    <p>The confusion matrix shows you which intents
      are mistaken for others. Read more about it in <a href="">our documentation</a>.</p>
    <div class="graphics-results__charts">
      <!----> <img src="https://s3.amazonaws.com/bothub-sample/confmat.png" alt="chart1"></div>
  </div>
  <div class="bh-grid__item">
    <h4>Intent confidence distribution</h4>
    <p>
      The histogram allows you to visualize the
      confidence distribution for all predictions, with the volume of
      correct and incorrect predictions being displayed by green and red bars respectively.
      Improving the quality of your training data will move the
      green histogram bars to the right and
      the red histogram bars to the left of the plot.
    </p>
    <p>Read more about it in <a href="">our documentation</a>.</p>
    <div class="graphics-results__charts">
      <!----> <img src="https://s3.amazonaws.com/bothub-sample/hist.png" alt="chart2"></div>
  </div>
</div>
`;
